# dotfile-manager

./: README.md  index.js  package-lock.json  package.json  setup.pl
modules/data_backup/: Zip_unzip.pl
modules/script_backup/: Script_backup.pl
perl_modules/data_backup/: Data_backup.pl
scripts/: .gitconfig  .zsh_history  .zshrc
scripts/.config/Code/: Cookies  storage.json
scripts/.config/Code/Backups/: workspaces.json
scripts/.config/Code/Cache/: data_0  data_1  data_2  f_00000a  f_00000b  f_00000c  f_000016  f_000017  f_000018  f_000019  f_00001b  f_00001c  f_00001d  f_00001e  f_000025  f_000026  f_000028  f_000029  f_00002a  f_00002c  f_00002d  f_00002e  f_00002f  f_000031  f_000032  f_000033  f_000034  f_000036  f_000037  f_000038  f_00003d  f_00003f  index
scripts/.config/Code/CachedExtensions/: builtin  user
scripts/.config/Code/Code/: Cookies  Preferences  machineid
scripts/.config/Code/Local Storage/: file__0.localstorage
scripts/.config/Code/User/: settings.json
scripts/.config/i3/: config
scripts/.config/i3blocks/: i3blocks_bottombar.conf  i3blocks_topbar.conf
scripts/.fonts/: .uuid
scripts/.i3_scripts/i3_manager/: CMakeLists.txt
scripts/.i3_scripts/i3_manager/src/: main.cpp  util.cpp  util.h
scripts/.i3_scripts/i3blocks/: bandwidth.pl  battery.pl  battery_health.pl  brightness.pl  cpu.pl  date.pl  disk.pl  kbd_backlight.pl  ram.pl  ssid.pl  time.pl  volume.pl  volume.sh
support/: Matcha-dark-sea.tar.xz  Matcha-icon-theme.tar.xz
ui_modules/: pull_backup_ui.js  pull_dotfiles_ui.js
utils/: find_external_devices_utils.js
(+248 files in other folders)
